[gd_scene load_steps=5 format=3 uid="uid://cbcp2g041nkpb"]

[ext_resource type="Script" path="res://scripts/levels/level1_movement.gd" id="1_wqo0l"]
[ext_resource type="PackedScene" uid="uid://cyf78f2y65kgv" path="res://scenes/blocks/code_block_move.tscn" id="2_oret7"]

[sub_resource type="Texture2DRD" id="Texture2DRD_4xxul"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnkaj"]
size = Vector2(369, 409)

[node name="level1_movement" type="Node2D"]
script = ExtResource("1_wqo0l")

[node name="code_block_move" parent="." instance=ExtResource("2_oret7")]
z_index = 99
position = Vector2(396, 36)

[node name="code_block_move2" parent="." instance=ExtResource("2_oret7")]
z_index = 99
position = Vector2(141, 72)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(350, 400)
offset_left = 802.0
offset_top = 94.0
offset_right = 1152.0
offset_bottom = 540.0

[node name="compiler" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(350, 400)
layout_mode = 2

[node name="compile" type="Node2D" parent="ScrollContainer/compiler"]

[node name="compiler_area" type="Area2D" parent="ScrollContainer/compiler/compile"]

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/compiler/compile/compiler_area"]
custom_minimum_size = Vector2(350, 400)
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("Texture2DRD_4xxul")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScrollContainer/compiler/compile/compiler_area"]
position = Vector2(174.5, 194.5)
shape = SubResource("RectangleShape2D_pnkaj")

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="area_entered" from="ScrollContainer/compiler/compile/compiler_area" to="." method="_on_compiler_area_area_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
